--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "mesto-project-bootcamp",
+  "name": "mesto",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "dev": "webpack serve"
+    "dev": "webpack serve",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SKuranov22/mesto-project-bootcamp.git"
+    "url": "git+https://github.com/SKuranov22/mesto.git"
   },
   "author": "Stanislav Kuranov",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/SKuranov22/mesto-project-bootcamp/issues"
+    "url": "https://github.com/SKuranov22/mesto/issues"
   },
-  "homepage": "https://github.com/SKuranov22/mesto-project-bootcamp#readme",
+  "homepage": "https://github.com/SKuranov22/mesto#readme",
   "devDependencies": {
     "@babel/core": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
@@ -25,6 +27,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.3",
     "cssnano": "^6.0.0",
+    "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.5",
     "postcss-loader": "^7.1.0",
